--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
             <version>4.2.1.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+
     </dependencies>
 
     <repositories>
